force-app/main/default/objects/Form_Value__c/Form_Value__c.object-meta.xml
<CustomObject>
    <description>Form value stores all the miscellaneous features of the saved forms like Approvals, Care Episodes and Status. All the problems, diagnoses, medications and allergies selected on the forms are also linked with this object as the record in this object is also responsible for giving one identity to the forms saved in multiple objects.</description>
    <label>Form Value</label>
    <nameField>
        <label>Form Value Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Form Values</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>