force-app/main/default/objects/Form_Value__c/fields/Approved_Signature__c.field-meta.xml
<CustomField>
    <fullName>Approved_Signature__c</fullName>
    <label>Approved Signature</label>
    <length>255</length>
    <type>Text</type>
</CustomField>