force-app/main/default/objects/Form_Value__c/fields/AttachmentIds__c.field-meta.xml
<CustomField>
    <fullName>AttachmentIds__c</fullName>
    <label>AttachmentIds</label>
    <length>1100</length>
    <type>LongTextArea</type>
</CustomField>