force-app/main/default/objects/Form_Value__c/fields/Blue_Print__c.field-meta.xml
<CustomField>
    <fullName>Blue_Print__c</fullName>
    <label>Blue Print</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>