force-app/main/default/objects/Form_Value__c/fields/Care_Episode__c.field-meta.xml
<CustomField>
    <fullName>Care_Episode__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Care Episode</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.Is_CareEpisode__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Visits__c</referenceTo>
    <relationshipLabel>Forms/Notes</relationshipLabel>
    <relationshipName>Form_Values</relationshipName>
    <type>Lookup</type>
</CustomField>