force-app/main/default/objects/Form_Value__c/fields/Consent_Default_Text__c.field-meta.xml
<CustomField>
    <fullName>Consent_Default_Text__c</fullName>
    <label>Consent Default Text</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>