force-app/main/default/objects/Form_Value__c/fields/Consent_Input_JSON__c.field-meta.xml
<CustomField>
    <fullName>Consent_Input_JSON__c</fullName>
    <label>Consent Input JSON</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>