force-app/main/default/objects/Form_Value__c/fields/Consent_Pdf__c.field-meta.xml
<CustomField>
    <fullName>Consent_Pdf__c</fullName>
    <label>Consent Pdf</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>