force-app/main/default/objects/Form_Value__c/fields/Consent_Text__c.field-meta.xml
<CustomField>
    <fullName>Consent_Text__c</fullName>
    <label>Consent Text</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>