force-app/main/default/objects/Form_Value__c/fields/Date_Of_Approval__c.field-meta.xml
<CustomField>
    <fullName>Date_Of_Approval__c</fullName>
    <label>Date Of Approval</label>
    <type>DateTime</type>
</CustomField>