force-app/main/default/objects/Form_Value__c/fields/Default1__c.field-meta.xml
<CustomField>
    <fullName>Default1__c</fullName>
    <label>Default Value</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>