force-app/main/default/objects/Form_Value__c/fields/Enable_As__c.field-meta.xml
<CustomField>
    <fullName>Enable_As__c</fullName>
    <label>Enable As</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>VisitNote</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>