force-app/main/default/objects/Form_Value__c/fields/Episode_Id__c.field-meta.xml
<CustomField>
    <fullName>Episode_Id__c</fullName>
    <label>Episode Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>