force-app/main/default/objects/Form_Value__c/fields/Form_Detail__c.field-meta.xml
<CustomField>
    <fullName>Form_Detail__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Form Detail</label>
    <type>Checkbox</type>
</CustomField>