force-app/main/default/objects/Form_Value__c/fields/Form_Portal_Status__c.field-meta.xml
<CustomField>
    <fullName>Form_Portal_Status__c</fullName>
    <label>Form Portal Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Submitted to Provider</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>