force-app/main/default/objects/Form_Value__c/fields/Has_Modular_Matrix_Data__c.field-meta.xml
<CustomField>
    <fullName>Has_Modular_Matrix_Data__c</fullName>
    <defaultValue>false</defaultValue>
    <description>denotes whether this record contains some data in it</description>
    <label>Has Modular Matrix Data</label>
    <type>Checkbox</type>
</CustomField>