force-app/main/default/objects/Form_Value__c/fields/Is_Approver__c.field-meta.xml
<CustomField>
    <fullName>Is_Approver__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Approver</label>
    <type>Checkbox</type>
</CustomField>