force-app/main/default/objects/Form_Value__c/fields/Is_AutoText__c.field-meta.xml
<CustomField>
    <fullName>Is_AutoText__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is AutoText</label>
    <type>Checkbox</type>
</CustomField>