force-app/main/default/objects/Form_Value__c/fields/Is_CareEpisode__c.field-meta.xml
<CustomField>
    <fullName>Is_CareEpisode__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is CareEpisode</label>
    <type>Checkbox</type>
</CustomField>