force-app/main/default/objects/Form_Value__c/fields/Is_External_Signature__c.field-meta.xml
<CustomField>
    <fullName>Is_External_Signature__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is External Signature</label>
    <type>Checkbox</type>
</CustomField>