force-app/main/default/objects/Form_Value__c/fields/Is_Old__c.field-meta.xml
<CustomField>
    <fullName>Is_Old__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Old</label>
    <type>Checkbox</type>
</CustomField>