force-app/main/default/objects/Form_Value__c/fields/Modular_Matrix_Data_JSON__c.field-meta.xml
<CustomField>
    <fullName>Modular_Matrix_Data_JSON__c</fullName>
    <label>Modular Matrix Data JSON</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>