force-app/main/default/objects/Form_Value__c/fields/Only_text_in_consent__c.field-meta.xml
<CustomField>
    <fullName>Only_text_in_consent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Only text in consent</label>
    <type>Checkbox</type>
</CustomField>