force-app/main/default/objects/Form_Value__c/fields/Patient_Notified__c.field-meta.xml
<CustomField>
    <fullName>Patient_Notified__c</fullName>
    <label>Patient Notified</label>
    <type>DateTime</type>
</CustomField>