force-app/main/default/objects/Form_Value__c/fields/Reopened_Date__c.field-meta.xml
<CustomField>
    <fullName>Reopened_Date__c</fullName>
    <label>Reopened Date</label>
    <type>DateTime</type>
</CustomField>