force-app/main/default/objects/Form_Value__c/fields/Reopened_Order__c.field-meta.xml
<CustomField>
    <fullName>Reopened_Order__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Reopened Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>