force-app/main/default/objects/Form_Value__c/fields/Signed_Patient__c.field-meta.xml
<CustomField>
    <fullName>Signed_Patient__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Signed Patient</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Form Values (Signed Patient)</relationshipLabel>
    <relationshipName>Form_Values1</relationshipName>
    <type>Lookup</type>
</CustomField>